evap/static/scss/components/_grid.scss
.container-striped .row:nth-child(odd) {
    background-color: $table-striped-bg;
}

.lcr-left {
    flex: 1;
}
.lcr-center {
    flex: 5;
    text-align: center;
}
.lcr-right {
    flex: 1;
    text-align: right;
}


.col-question {
    position: relative;
    padding: 0.5rem 0.75rem 0;
    word-wrap: break-word;

    &.choice-error {
        font-weight: bold;
        color: $evap-dark-red;
    }

    @include media-breakpoint-up(lg) {
        padding-bottom: 0.5rem;
    }
}

.col-answer {
    padding: 0.5rem 0.75rem 0.9rem;

    @include media-breakpoint-up(lg) {
        padding-bottom: 0.5rem;
    }
}

.col-lg-broad {
    @include media-breakpoint-up(lg) {
        padding-top: 0.75rem;
        padding-bottom: 0.75rem;
    }
}

%grid-row {
    display: grid;
    min-height: 2.5rem;
    padding: 0.75rem;
    gap: 0.5rem 1rem;
    align-items: center;

    @at-root a#{&} {
        color: $black;
        text-decoration: none;
    }

    @include media-breakpoint-up(lg) {
        column-gap: 2rem;
    }
}

#results-grid > :not(:first-child) {
    border-top: calc(2 * $table-border-width) solid $table-border-color;

    @include media-breakpoint-up(lg) {
        border-top-width: $table-border-width;
    }
}

.results-grid-row {
    @extend %grid-row;

    grid:
        "name semester responsible participants result"
        / auto    6rem       12rem         7rem  11rem;

    @include media-breakpoint-down(lg) {
        grid:
            "name semester  responsible responsible"
            "name semester participants      result"
            / auto    3rem         7rem       10rem;
    }

    @include media-breakpoint-down(md) {
        grid:
            "        name        name    semester"
            " responsible responsible responsible"
            "participants      result      result"
            /         1fr         1fr        6rem;
    }

    &:not(.grid-header) [data-col=responsible] {
        font-style: italic;
    }

    [data-col=participants] {
        max-width: 8rem;
    }

    [data-col=result] {
        width: 100%;
        max-width: 11rem;
        justify-self: end;
    }

    &.course-row {
        padding-bottom: 0.2rem;
    }

    &.evaluation-row {
        padding: 0.5rem 0.75rem 0.5rem 2rem;
        font-size: 0.9rem;
        row-gap: 0.25rem;

        [data-col=name] {
            font-style: italic;
            color: $dark-gray;
        }
    }
}

@each $col in name, semester, responsible, participants, result {
    [data-col=#{$col}] {
        grid-area: $col;
    }
}

.col-order {
    position: relative;
    padding-left: 1em;
    cursor: pointer;

    &::before, &::after {
        position: absolute;
        bottom: 0;
        opacity: 0.3;
    }

    &::before {
        left: 0;
        content: "↓";
    }

    &::after {
        left: 0.4em;
        content: "↑";
    }

    &-asc::before, &-desc::after {
        opacity: 1;
    }
}

th.col-order {
    padding-left: 1.4em;

    &:empty {
        padding-right: 0;
    }

    &::before, &::after {
        margin-left: 0.2em;
        bottom: 0.5em;
    }
}

.grid-header {
    align-items: stretch;
    font-weight: bold;

    [data-col] {
        display: flex;
        align-items: flex-end;
    }
}

.infotext-edit-grid {
    display: grid;
    grid-template-columns: auto auto;
    grid-column-gap: 0.5rem;
}

